# BYU-MS-Core-Automative-Proteomics-Tools

./: .gitattributes  .gitignore  Astral_HEY_Analysis.py  CHANGELOG.md  CONTRIBUTING.md  Launch_MSPP_App.bat  QUICK_REFERENCE.md  README.md  Simple_Protein_Plotter.py  filter_fasta_gui.py  pyproject.toml  requirements.txt
.github/: CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: codeql.yml
.programs/: MSPP_data_plotter.py  Simple_Protein_Plotter.py
.programs/.pyscripts/: MSPP_data_plotter.py  filter_fasta_gui.py
.programs/mspp_web/: launch_app.py
.programs/mspp_web/backend/: app.py
data/HEY_Astral/Fragpipe/: hey_astral_experiment_annotation.tsv  hey_astral_report.pg_matrix.tsv  hey_eclipse_experiment_annotation.tsv  hey_eclipse_report.pg_matrix.tsv
data/HEY_Astral/MSConnect/: MSConnect TraceBack.xlsx  combined_report.pg_matrix_E100_30_4_350960_800_E25_30_4_440960_800.tsv  report.pg_matrix_0iQjUka.tsv  report.pg_matrix_1oSCzhJ.tsv  report.pg_matrix_77uqPLK.tsv  report.pg_matrix_8j4MIEK.tsv  report.pg_matrix_A3ns3Ke.tsv  report.pg_matrix_BCY6KtJ.tsv  report.pg_matrix_D8KURMh.tsv  (+31 more)
literature/: reference _literature.md
programs/mspp_web/: API_CHANGES.md  ARCHITECTURE.md  MIGRATION_CHECKLIST.md  README.md  launch_app.py
programs/pyscripts/: MSPP_data_analysis.ipynb  MSPP_data_plotter.py  filter_fasta_gui.py
programs/python/: MSPP_data_analysis.ipynb  filter_fasta_gui.py
scripts/: cleanup_python_packages.ps1  setup_dev.ps1
tests/debug/: debug_path.py  debug_regex.py
tutorials/FA_Workflow_Tutorial/: FA_Workflow_Tutorial.md
(+11 files in other folders)
