[project]
name = "byu-ms-core"
version = "0.1.0"
description = "Mass Spectrometry QC and Analysis Tools for BYU Fritz B. Burns Cancer Research Center"
authors = [
    {name = "BYU MS Core Lab"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ipython>=9.0.0",
    "ipykernel>=7.0.0",
    "jupyter_client>=8.0.0",
]

jupyter = [
    "ipython>=9.0.0",
    "ipykernel>=7.0.0",
    "jupyter_client>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/MSCoreLab/BYU-Core-MS-Lab"
Repository = "https://github.com/MSCoreLab/BYU-Core-MS-Lab"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Only check for critical errors, not formatting
select = ["E", "F"]  # E = errors, F = pyflakes
ignore = [
    "E501",  # Line too long (handled by black)
    "W291",  # Trailing whitespace
    "W293",  # Blank line contains whitespace
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
